# SAM3_ultralytics_ros2

./: README.md
sam3_msgs/: CMakeLists.txt  package.xml
sam3_msgs/msg/: BoundingBox2D.msg  BoundingBox3D.msg  Detection.msg  DetectionArray.msg  Mask.msg
sam3_ros2/: README.md  package.xml  setup.cfg  setup.py
sam3_ros2/config/: sam3_config.yaml
sam3_ros2/launch/: sam3.launch.py
sam3_ros2/rviz/: sam3_bev.rviz
sam3_ros2/sam3_ros2/: bev_projector_node.py  depth_estimator_node.py  sam3_node.py
